🛥💖 Checkpoint ./views/products.ejs:10221761/1161 ./static/style.css:10221761/148 ./views/product-claims.ejs:10221761/74 ./views/employees.ejs:10221761/52 ./views/customers.ejs:10221761/61 ./views/claims.ejs:10221761/57

--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -1,5 +1,6 @@
-<%- include("partials/header") %>
+<!-- SORTABLE LIST OF ALL CUSTOMERS  -->
 
+<%- include("partials/header") %>
 
 <% if (locals.customers) { %> 
 <h1>
