--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -1,5 +1,6 @@
-<%- include("partials/header") %>
+<!-- LIST OF ALL EMPLOYEES  -->
 
+<%- include("partials/header") %>
 
 <% if (locals.employees) { %> 
 <h1>
