--- a/views/product-claims.ejs
+++ b/views/product-claims.ejs
@@ -1,4 +1,4 @@
-<!-- LIST OF ALL CLAIMS RELATED TO A PRODUCT TYPE  -->
+<!-- EDITABLE LIST OF ALL CLAIMS RELATED TO A PRODUCT TYPE  -->
 
 <%- include("partials/header") %>
 
