--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -1,4 +1,4 @@
-<!-- LIST OF ALL EMPLOYEES  -->
+<!-- CLICKABLE LIST OF ALL EMPLOYEES  -->
 
 <%- include("partials/header") %>
 
@@ -7,6 +7,11 @@
   Employees
 </h1>
 create employee
+
+<form id="claimsBtn" method="get">
+  <button type="submit" id="claims">View Claims for this product</button>  <!-- need button to be in a form to later redirect by setting form's action in javascript below -->
+</form>
+
 <table class="table table-hover">
   <thead>
     <tr>
