--- a/views/product-claims.ejs
+++ b/views/product-claims.ejs
@@ -27,7 +27,8 @@
   <% var dateClosed = new Date(result.dateopened) %>
   <% var dateClosed= dateClosed.getDate() + "/" +  (dateClosed.getMonth()+1) + "/" + dateClosed.getFullYear() %>
     <tr>
-      <td><div class="dropdown">
+      <td>
+        <div class="dropdown">
           <button class="dropdown-toggle" type="button" data-toggle="dropdown">Edit
           <span class="caret"></span></button>
           <ul class="dropdown-menu">
@@ -42,7 +43,8 @@
             <%}%>
             <li><a href='/edit/<%=result.claimid%>'>Edit Claim</a></li>  <!--  add Edit dropdown option  -->
           </ul>
-        </div></td>
+        </div>
+      </td>
       <td><%=result.customer%></td>
       <td><%=result.issue%></td>
       <td><%=result.status%></td>
