🏮🚕 Checkpoint ./views/employees.ejs:10221761/167 ./static/style.css:10221761/165 ./views/partials/header.ejs:10221761/6 ./routes/api.js:10221761/890 ./routes/views.js:10221761/33 ./README.md:10221761/174

--- a/static/style.css
+++ b/static/style.css
@@ -38,7 +38,6 @@
 
 .clickable-row {
   background: none;
-  /* 	color: yellow; */
   border: none;
   width: 100%;
   height: 100%;
@@ -52,7 +51,7 @@
 .dropdown, .dropdown-menu" {
   top: 0px;
   left: 0px;
-  position: relative;
+  position: relative; /*so that dropdown menu is visible infront of objects no matter where it is placed*/
   z-index: 10000;
 }
 
