--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -7,14 +7,14 @@
   Employees
 </h1>
 create employee
+
 <form id="sort" method="get">
-  <div class="dropdown">
-    <button class="dropdown-toggle" type="button" data-toggle="dropdown">Sort by
-    <span class="caret"></span></button>
+  <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
+    <button class="dropdown-toggle" type="button" data-toggle="dropdown">Sort by <span class="caret"></span></button>
     <ul class="dropdown-menu">
-      <li><button type="submit" formaction="/employees/asc"> asc </button></li>
-      <li><button type="submit" formaction="/employees/desc"> desc </button></li>
-      <li><button type="submit" formaction="/employees/asc"> asc </button></li>
+      <li><button type="submit" formaction="/employees/asc"> Ascending Last Name </button></li>
+      <li><button type="submit" formaction="/employees/desc"> Descending Last Name </button></li>
+      <li><button type="submit" formaction="/employees/title"> Title </button></li>
     </ul>
   </div>
 </form>
