🍴🏣 Checkpoint ./routes/api.js:10221761/289 ./routes/views.js:10221761/468 ./views/customers.ejs:10221761/823

--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -7,6 +7,19 @@
   Customers
 </h1>
 create customer
+
+<form id="sort" method="get">
+  <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
+    <button class="dropdown-toggle" type="button" data-toggle="dropdown">Sort by <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><button type="submit" formaction="/customers/asc"> Ascending Last Name </button></li>
+      <li><button type="submit" formaction="/customers/desc"> Descending Last Name </button></li>
+      <li><button type="submit" formaction="/customers/expendasc"> Greatest Expenditure </button></li>
+      <li><button type="submit" formaction="/customers/expenddesc"> Least Expenditure </button></li>
+    </ul>
+  </div>
+</form>
+
 <table class="table table-hover">
   <thead>
     <tr>
