👞🏊🏼 Checkpoint ./routes/api.js:10221761/2002 ./views/customers.ejs:10221761/62 ./routes/views.js:10221761/2

--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -14,8 +14,8 @@ create customer
     <ul class="dropdown-menu">
       <li><button type="submit" formaction="/customers/asc"> Ascending Last Name </button></li>
       <li><button type="submit" formaction="/customers/desc"> Descending Last Name </button></li>
-      <li><button type="submit" formaction="/customers/expendasc"> Greatest Expenditure </button></li>
-      <li><button type="submit" formaction="/customers/expenddesc"> Least Expenditure </button></li>
+      <li><button type="submit" formaction="/customers/greatest"> Greatest Expenditure </button></li>
+      <li><button type="submit" formaction="/customers/least"> Least Expenditure </button></li>
     </ul>
   </div>
 </form>
