--- a/views/products.ejs
+++ b/views/products.ejs
@@ -9,6 +9,19 @@
 <p>
   create new product 
 </p>
+
+<form id="sort" method="get">
+  <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
+    <button class="dropdown-toggle" type="button" data-toggle="dropdown">Sort by <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><button type="submit" formaction="/products/asc"> Ascending Product </button></li>
+      <li><button type="submit" formaction="/products/desc"> Descending Product </button></li>
+      <li><button type="submit" formaction="/products/greatest"> Most Expensive </button></li>
+      <li><button type="submit" formaction="/products/least"> Least Expensive </button></li>
+    </ul>
+  </div>
+</form>
+
 <table class="table table-hover">
   <thead>
     <tr>
