👡🎉 Checkpoint ./routes/api.js:10221761/1144 ./views/products.ejs:10221761/220 ./views/employees.ejs:10221761/118 ./views/customers.ejs:10221761/387 ./views/product-claims.ejs:10221761/10 ./static/style.css:10221761/550

--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -1,4 +1,4 @@
-<!-- CLICKABLE LIST OF ALL EMPLOYEES  -->
+<!-- CLICKABLE, SORTABLE LIST OF ALL EMPLOYEES  -->
 
 <%- include("partials/header") %>
 
@@ -12,9 +12,9 @@ create employee
   <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
     <button class="dropdown-toggle" type="button" data-toggle="dropdown">Sort by <span class="caret"></span></button>
     <ul class="dropdown-menu">
-      <li><button type="submit" formaction="/employees/asc"> Ascending Last Name </button></li>
-      <li><button type="submit" formaction="/employees/desc"> Descending Last Name </button></li>
-      <li><button type="submit" formaction="/employees/title"> Title </button></li>
+      <li><button class="dropdown-sort-option-button" type="submit" formaction="/employees/asc"> Ascending Last Name </button></li>
+      <li><button class="dropdown-sort-option-button" type="submit" formaction="/employees/desc"> Descending Last Name </button></li>
+      <li><button class="dropdown-sort-option-button" type="submit" formaction="/employees/title"> Title </button></li>
     </ul>
   </div>
 </form>
