--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -12,10 +12,11 @@ create customer
   <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
     <button class="dropdown-toggle" type="button" data-toggle="dropdown">Sort by <span class="caret"></span></button>
     <ul class="dropdown-menu">
-      <li><button type="submit" formaction="/customers/asc"> Ascending Last Name </button></li>
-      <li><button type="submit" formaction="/customers/desc"> Descending Last Name </button></li>
-      <li><button type="submit" formaction="/customers/greatest"> Greatest Expenditure </button></li>
-      <li><button type="submit" formaction="/customers/least"> Least Expenditure </button></li>
+      <li><a href='/customers/asc'>Ascending Last Name </a></li>
+      <li><button class="dropdown-option" type="submit" formaction="/customers/asc"> Ascending Last Name </button></li>
+      <li><button class="dropdown-option" type="submit" formaction="/customers/desc"> Descending Last Name </button></li>
+      <li><button class="dropdown-option" type="submit" formaction="/customers/greatest"> Greatest Expenditure </button></li>
+      <li><button class="dropdown-option" type="submit" formaction="/customers/least"> Least Expenditure </button></li>
     </ul>
   </div>
 </form>
