--- a/views/products.ejs
+++ b/views/products.ejs
@@ -1,4 +1,4 @@
-<!-- CLICKABLE LIST OF ALL PRODUCTS  -->
+<!-- SORTABLE, CLICKABLE LIST OF ALL PRODUCTS  -->
 
 <%- include("partials/header") %>
 
@@ -14,10 +14,10 @@
   <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
     <button class="dropdown-toggle" type="button" data-toggle="dropdown">Sort by <span class="caret"></span></button>
     <ul class="dropdown-menu">
-      <li><button type="submit" formaction="/products/asc"> Ascending Product </button></li>
-      <li><button type="submit" formaction="/products/desc"> Descending Product </button></li>
-      <li><button type="submit" formaction="/products/greatest"> Most Expensive </button></li>
-      <li><button type="submit" formaction="/products/least"> Least Expensive </button></li>
+      <li><button class="dropdown-sort-option-button" type="submit" formaction="/products/asc"> Ascending Name </button></li>
+      <li><button class="dropdown-sort-option-button" type="submit" formaction="/products/desc"> Descending Name </button></li>
+      <li><button class="dropdown-sort-option-button" type="submit" formaction="/products/greatest"> Most Expensive </button></li>
+      <li><button class="dropdown-sort-option-button" type="submit" formaction="/products/least"> Least Expensive </button></li>
     </ul>
   </div>
 </form>
