--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -8,18 +8,15 @@
 </h1>
 create customer
 
-<form id="sort" method="get">
   <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
     <button class="dropdown-toggle" type="button" data-toggle="dropdown">Sort by <span class="caret"></span></button>
     <ul class="dropdown-menu">
-      <li><a href='/customers/asc'>Ascending Last Name </a></li>
-      <li><button class="dropdown-option" type="submit" formaction="/customers/asc"> Ascending Last Name </button></li>
-      <li><button class="dropdown-option" type="submit" formaction="/customers/desc"> Descending Last Name </button></li>
-      <li><button class="dropdown-option" type="submit" formaction="/customers/greatest"> Greatest Expenditure </button></li>
-      <li><button class="dropdown-option" type="submit" formaction="/customers/least"> Least Expenditure </button></li>
-    </ul>
+      <li><a href='/customers/asc'>Ascending Last Name</a></li>
+      <li><a href='/customers/desc'>Descending Last Name</a></li>
+      <li><a href='/customers/greatest'>Greatest Expenditure</a></li>
+      <li><a href='/customers/least'>Least Expenditure</a></li>
+     </ul>
   </div>
-</form>
 
 <table class="table table-hover">
   <thead>
