--- a/views/product-claims.ejs
+++ b/views/product-claims.ejs
@@ -10,12 +10,12 @@
   <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
     <button class="dropdown-toggle" type="button" data-toggle="dropdown">Sort by <span class="caret"></span></button>
     <ul class="dropdown-menu">
-      <li><a href='claims/products/sortby/customer'>Customer</a></li>
-      <li><a href='claims/products/sortby/issue'>Issue</a></li>
-      <li><a href='claims/products/sortby/status'>Status</a></li>
-      <li><a href='claims/products/sortby/resolution'>Resolution</a></li>
-      <li><a href='claims/products/sortby/opendate'>Date Open</a></li>
-      <li><a href='claims/products/sortby/employee'>Technician</a></li>
+      <li><a href='/claims/<%=claims[0].productid%>/sortby/customer'>Customer</a></li>
+      <li><a href='/claims/<%=claims[0].productid%>/sortby/issue'>Issue</a></li>
+      <li><a href='/claims/<%=claims[0].productid%>/sortby/status'>Status</a></li>
+      <li><a href='/claims/<%=claims[0].productid%>/sortby/resolution'>Resolution</a></li>
+      <li><a href='/claims/<%=claims[0].productid%>/sortby/opendate'>Date Open</a></li>
+      <li><a href='/claims/<%=claims[0].productid%>/sortby/employee'>Technician</a></li>
      </ul>
   </div>
 
