--- a/views/product-claims.ejs
+++ b/views/product-claims.ejs
@@ -14,7 +14,7 @@
       <li><a href='/claims/<%=claims[0].productid%>/sortby/issue'>Issue</a></li>
       <li><a href='/claims/<%=claims[0].productid%>/sortby/status'>Status</a></li>
       <li><a href='/claims/<%=claims[0].productid%>/sortby/resolution'>Resolution</a></li>
-      <li><a href='/claims/<%=claims[0].productid%>/sortby/opendate'>Date Open</a></li>
+      <li><a href='/claims/<%=claims[0].productid%>/sortby/dateopened'>Date Open</a></li>
       <li><a href='/claims/<%=claims[0].productid%>/sortby/employee'>Technician</a></li>
      </ul>
   </div>
