--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -13,9 +13,17 @@ create claims, edit and resolve claims, email techs any questions about claims
     <b>Sort by: </b>
     <select id="issueList">
       <option value="" disabled selected hidden></option> <!--  keeping the selected issue visible in dropdown box -->
-      <option value="customer" type="button" onclick="sortby(this);">Customer</option>
+      <option value="customer"><input value="customer" type="submit" onclick="sortby(this);"></option>
     </select>
 </form>
+
+
+<input list="select" name="select">
+<datalist class="form-control" id="select">    
+  <option type="submit" onclick="sortby(this);" value="customer"/>
+  <option value="Fund"/>
+  <option value="Insta"/>
+</datalist>
 
   <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
     <button class="dropdown-toggle" type="button" data-toggle="dropdown">Sort by <span class="caret"></span></button>
