--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -9,24 +9,12 @@
 create claims, edit and resolve claims, email techs any questions about claims
 <%- include("partials/claim-edit") %>
 
-<form method="get" action="/claims/customer">
-    <b>Sort by: </b>
-    <select id="issueList">
-      <option value="" disabled selected hidden></option> <!--  keeping the selected issue visible in dropdown box -->
-      <option value="customer"><input value="customer" type="submit" onclick="sortby(this);"></option>
-    </select>
-</form>
-
-
-<input list="select" name="select">
-<datalist class="form-control" id="select">    
-  <option type="submit" onclick="sortby(this);" value="customer"/>
-  <option value="Fund"/>
-  <option value="Insta"/>
-</datalist>
-
-  <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
-    <button class="dropdown-toggle" type="button" data-toggle="dropdown">Sort by <span class="caret"></span></button>
+<div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
+    <% if (locals.sort) { %>
+    <button class="dropdown-toggle" type="button" data-toggle="dropdown"><%=sort%><span class="caret"></span></button>
+    <%}else{%>
+        <button class="dropdown-toggle" type="button" data-toggle="dropdown"><%=sort%><span class="caret"></span></button>
+    <%}%>
     <ul class="dropdown-menu">
       <li><a href='/claims/customer'>Customer</a></li>
       <li><a href='/claims/issue'>Issue</a></li>
@@ -89,33 +77,6 @@ create claims, edit and resolve claims, email techs any questions about claims
 
 </table>
 </p>
-
-<script type=text/javascript>
- 
-  function sortby(element) {
-    //grabbing element information from html to populate modal depending on which product row was selected
-    console.log("hey")
-    fetch('https://ejs-views-practice.glitch.me/claims/'+element.value)
-        .then(function(data) {
-        }
-        .catch(function(error) {
-          console.log(error);
-        });
-      })  
-  
-    //close out of modal either when clicking 'x' 
-    closeBtn.onclick = function() {
-      modal.style.display = "none";
-    }
-    //or close modal when clicking outside of the modal
-    window.onclick = function(event) {
-      if (event.target == modal) {
-      modal.style.display = "none";
-      }
-    }
-  }//end function modal(element)
-  
-</script>
 
 
 <%}else{%>
