📡👻 Checkpoint ./views/claims.ejs:10221761/164 ./views/customers.ejs:10221761/676 ./views/employees.ejs:10221761/672 ./views/product-claims.ejs:10221761/668 ./views/products.ejs:10221761/674 ./routes/views.js:10221761/110

--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -9,7 +9,12 @@
 create customer
 
   <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
-    <button class="dropdown-toggle" type="button" data-toggle="dropdown">Sort by <span class="caret"></span></button>
+    <b>Sort by:</b>
+    <% if (locals.sort) { %>
+    <button class="dropdown-toggle" type="button" data-toggle="dropdown"><%=sort.charAt(0).toUpperCase()+ sort.slice(1).toLowerCase()%><span class="caret"></span></button>
+    <%}else{%>
+        <button class="dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret"></span></button>
+    <%}%>
     <ul class="dropdown-menu">
       <li><a href='/customers/asc'>Ascending Last Name</a></li>
       <li><a href='/customers/desc'>Descending Last Name</a></li>
