--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -10,10 +10,11 @@ create claims, edit and resolve claims, email techs any questions about claims
 <%- include("partials/claim-edit") %>
 
 <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
+    <b>Sort by:</b>
     <% if (locals.sort) { %>
-    <button class="dropdown-toggle" type="button" data-toggle="dropdown"><%=sort%><span class="caret"></span></button>
+    <button class="dropdown-toggle" type="button" data-toggle="dropdown"><%=sort.charAt(0).toUpperCase()+ sort.slice(1).toLowerCase()%><span class="caret"></span></button>
     <%}else{%>
-        <button class="dropdown-toggle" type="button" data-toggle="dropdown"><%=sort%><span class="caret"></span></button>
+        <button class="dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret"></span></button>
     <%}%>
     <ul class="dropdown-menu">
       <li><a href='/claims/customer'>Customer</a></li>
@@ -21,7 +22,7 @@ create claims, edit and resolve claims, email techs any questions about claims
       <li><a href='/claims/status'>Status</a></li>
       <li><a href='/claims/resolution'>Resolution</a></li>
       <li><a href='/claims/dateopened'>Date Open</a></li>
-      <li><a href='/claims/employee'>Technician</a></li>
+      <li><a href='/claims/employee'>Employee</a></li>
      </ul>
   </div>
 
