--- a/views/products.ejs
+++ b/views/products.ejs
@@ -9,9 +9,14 @@
 <p>
   create new product 
 </p>
-
+  
   <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
-    <button class="dropdown-toggle" type="button" data-toggle="dropdown">Sort by <span class="caret"></span></button>
+    <b>Sort by:</b>
+    <% if (locals.sort) { %>
+    <button class="dropdown-toggle" type="button" data-toggle="dropdown"><%=sort.charAt(0).toUpperCase()+ sort.slice(1).toLowerCase()%><span class="caret"></span></button>
+    <%}else{%>
+        <button class="dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret"></span></button>
+    <%}%>
     <ul class="dropdown-menu">
       <li><a href='/products/asc'>Ascending Name</a></li>
       <li><a href='/products/desc'>Descending Name</a></li>
