🐵🏙 Checkpoint ./views/claims.ejs:10221761/1503 ./README.md:10221761/135

--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -26,22 +26,12 @@ create claims, edit and resolve claims, email techs any questions about claims
      </ul>
   </div>
 
-<div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
-    <b>Filter by:</b>
-    <% if (locals.sort) { %>
-    <button class="dropdown-toggle" type="button" data-toggle="dropdown"><%=sort.charAt(0).toUpperCase()+ sort.slice(1).toLowerCase()%><span class="caret"></span></button>
-    <%}else{%>
-        <button class="dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret"></span></button>
-    <%}%>
-    <ul class="dropdown-menu">
-      <li><a href='/claims/customer'>Customer</a></li>
-      <li><a href='/claims/issue'>Issue</a></li>
-      <li><a href='/claims/status'>Status</a></li>
-      <li><a href='/claims/resolution'>Resolution</a></li>
-      <li><a href='/claims/dateopened'>Date Open</a></li>
-      <li><a href='/claims/employee'>Employee</a></li>
-     </ul>
+<div id="create">
+    <button onClick="createDiv()">Click me!</button>
+  <div id="getText" style="display: none;">
+    INNERHTML
   </div>
+
 
 <table class="table table-hover">
   <thead>
@@ -96,6 +86,15 @@ create claims, edit and resolve claims, email techs any questions about claims
 </table>
 </p>
 
+<script type=text/javascript>
+
+ function createDiv() {
+    var div = document.createElement('div');
+    div.innerHTML = document.getElementById('getText').innerHTML;
+    document.body.appendChild(div);
+  }
+
+</script>
 
 <%}else{%>
 <h1>
