📼🍟 Checkpoint ./views/claims.ejs:10221761/8720

--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -9,7 +9,7 @@
 create claims, edit and resolve claims, email techs any questions about claims
 <%- include("partials/claim-edit") %>
 
-<div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
+  <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
     <b>Sort by:</b>
     <% if (locals.sort) { %>
     <button class="dropdown-toggle" type="button" data-toggle="dropdown"><%=sort.charAt(0).toUpperCase()+ sort.slice(1).toLowerCase()%><span class="caret"></span></button>
@@ -27,8 +27,75 @@ create claims, edit and resolve claims, email techs any questions about claims
   </div>
 
   <button onClick="filter()">Filter </button>
+  <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
+    <% if (locals.filt) { %>
+    <button class="dropdown-toggle" type="button" data-toggle="dropdown"><%=filt.charAt(0).toUpperCase()+ sort.slice(1).toLowerCase()%><span class="caret"></span></button>
+    <%}else{%>
+        <button class="dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret"></span></button>
+    <%}%>
+    <ul class="dropdown-menu">
+      <li><a href='/claims/customer'>Customer</a></li>
+      <li><a href='/claims/issue'>Issue</a></li>
+      <li><a href='/claims/status'>Status</a></li>
+      <li><a href='/claims/resolution'>Resolution</a></li>
+      <li><a href='/claims/dateopened'>Date Open</a></li>
+      <li><a href='/claims/employee'>Employee</a></li>
+     </ul>
+  </div>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-white py-3 shadow-sm">
+  <div class="container">
+    <a href="#" class="navbar-brand font-weight-bold">Multilevel Dropdown</a>
+    <button type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
+              <span class="navbar-toggler-icon"></span>
+          </button>
 
 
+    <div id="navbarContent" class="collapse navbar-collapse">
+      <ul class="navbar-nav mr-auto">
+        <!-- Level one dropdown -->
+        <li class="nav-item dropdown">
+          <a id="dropdownMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">Dropdown</a>
+          <ul aria-labelledby="dropdownMenu1" class="dropdown-menu border-0 shadow">
+            <li><a href="#" class="dropdown-item">Some action </a></li>
+            <li><a href="#" class="dropdown-item">Some other action</a></li>
+
+            <li class="dropdown-divider"></li>
+
+            <!-- Level two dropdown-->
+            <li class="dropdown-submenu">
+              <a id="dropdownMenu2" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-item dropdown-toggle">Hover for action</a>
+              <ul aria-labelledby="dropdownMenu2" class="dropdown-menu border-0 shadow">
+                <li>
+                  <a tabindex="-1" href="#" class="dropdown-item">level 2</a>
+                </li>
+
+                <!-- Level three dropdown-->
+                <li class="dropdown-submenu">
+                  <a id="dropdownMenu3" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-item dropdown-toggle">level 2</a>
+                  <ul aria-labelledby="dropdownMenu3" class="dropdown-menu border-0 shadow">
+                    <li><a href="#" class="dropdown-item">3rd level</a></li>
+                    <li><a href="#" class="dropdown-item">3rd level</a></li>
+                  </ul>
+                </li>
+                <!-- End Level three -->
+
+                <li><a href="#" class="dropdown-item">level 2</a></li>
+                <li><a href="#" class="dropdown-item">level 2</a></li>
+              </ul>
+            </li>
+            <!-- End Level two -->
+          </ul>
+        </li>
+        <!-- End Level one -->
+
+        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Services</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <div id="create">
     <button onClick="addFilter()">Add Filter</button>
